# langserve-gcloud-deployment-demo

./: README.md  pyproject.toml
app/: server.py
